# ai-wiki-golf

./: .env.example  .gitignore  AGENTS.md  README.md  draft.md  pyproject.toml
data/: eval_pairs.yaml
report/: concept.md
report/output/: body.md
scripts/: generate_eval_pairs.py
src/ai_wiki_golf/: __init__.py  cli.py  config.py  evaluation.py  experiment.py  game.py  generate_eval_pairs.py  llm.py  mediawiki.py  visualize.py
